@@ -184,6 +184,15 @@ Classifiers
 | `Perceptron <http://simplestatistics.readthedocs.io/en/latest/#perceptron>`__                           | See documentation for examples of how to train and classify.   |
 +---------------------------------------------------------------------------------------------------------+----------------------------------------------------------------+
 
+Errors
+^^^^^^
+
++-----------------------------------------------------------------------------------------------+-------------------------+
+| Function                                                                                      | Example                 |
++===============================================================================================+=========================+
+| `Gauss error function <http://simplestatistics.readthedocs.io/en/latest/#error-function>`__   | ``error_function(1)``   |
++-----------------------------------------------------------------------------------------------+-------------------------+
+
 Spirit and rules
 ~~~~~~~~~~~~~~~~
 
