@@ -40,3 +40,6 @@ from .statistics.t_test import t_test
 # classifiers
 from .statistics.bayesian_classifier import bayesian_classifier
 from .statistics.perceptron import perceptron
+
+# errors
+from .statistics.error_function import error_function
