@@ -1,6 +1,11 @@
 History
 -------
 
+0.x.x (TBD)
+-----------
+
+* ``error_function()``
+
 0.2.5. (2016-09-24)
 ------------
 
